--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             width: 80%;
         }
         .countdown div {
-            font-size: 2em;
+            font-size: 1.5em;
             margin: 10px 0;
             display: inline-block;
         }
@@ -68,10 +68,12 @@
 
         .months{
             font-weight: bold;
+            font-size: 1.7;
         }
 
         .days{
             font-weight: bold;
+            font-size: 1.7;
         }
     </style>
 </head>
@@ -79,8 +81,8 @@
     <div class="background"></div>
     <div class="countdown">
         <div class="">Faltan </div>
-        <div id="months">Meses: 0</div>
-        <div id="days">Días: 0</div>
+        <div class="months" id="months">Meses: 0</div>
+        <div class="days" id="days">Días: 0</div>
         <div class=""> para nuestra salida en vivo</div>
     </div>
 
