Ajuste logo posicion

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             background-image: url('logo.svg');
             background-size: contain;
             background-position: center;
+            background-repeat: no-repeat;
             opacity: 0.9; /* Ajustar la opacidad según sea necesario */
             z-index: 0;
         }
