--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
         .background {
             /* Ajustes de fondo */
-            background-image: url('./CONTADOR\ SAP_fijo.jpg');
+            /*background-image: url('./CONTADOR\ SAP_fijo.jpg');
             background-size: cover; /* Hace que la imagen cubra todo el área */
-            background-repeat: no-repeat; /* Evita que la imagen se repita */
-            background-position: center; /* Centra la imagen */
+            /*background-repeat: no-repeat; /* Evita que la imagen se repita */
+            /*background-position: center; /* Centra la imagen */
             
             /* Ajustes de tamaño */
             height: 100%;
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="background">
-        <!-- Contenido de la página aquí -->
+        <img src="./CONTADOR SAP_fijo.jpg" alt="">
     </div>
 </body>
 </html>
