--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         }
 
         .background {
+            transform: rotate(270deg);
             /* Ajustes de fondo */
             /*background-image: url('./CONTADOR\ SAP_fijo.jpg');
             background-size: cover; /* Hace que la imagen cubra todo el área */
