--- a/index.html
+++ b/index.html
@@ -12,22 +12,16 @@
         }
 
         .background {
-            transform: rotate(270deg);
-            /* Ajustes de fondo */
-            /*background-image: url('./CONTADOR\ SAP_fijo.jpg');
-            background-size: cover; /* Hace que la imagen cubra todo el área */
-            /*background-repeat: no-repeat; /* Evita que la imagen se repita */
-            /*background-position: center; /* Centra la imagen */
-            
-            /* Ajustes de tamaño */
+            background-image: url('./icons/background.png');
+            background-size: cover;
+            background-position: center;
             height: 100%;
-            width: 100%;
         }
     </style>
 </head>
 <body>
     <div class="background">
-        <img src="./CONTADOR SAP_fijo.jpg" alt="">
+        
     </div>
 </body>
 </html>
