--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         .background {
-            background-image: url('./icons/background.png');
+            background-image: url('./icons/background1.png');
             background-size: cover;
             background-position: center;
             height: 100%;
